logs/dag_id=db_dg/run_id=manual__2024-01-04T070044.090125+0000/task_id=create_post_DB/attempt=2.log
[2024-01-04T07:06:05.958+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: db_dg.create_post_DB manual__2024-01-04T07:00:44.090125+00:00 [queued]>
[2024-01-04T07:06:05.975+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: db_dg.create_post_DB manual__2024-01-04T07:00:44.090125+00:00 [queued]>
[2024-01-04T07:06:05.975+0000] {taskinstance.py:2171} INFO - Starting attempt 2 of 4
[2024-01-04T07:06:06.147+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): create_post_DB> on 2024-01-04 07:00:44.090125+00:00
[2024-01-04T07:06:06.153+0000] {standard_task_runner.py:60} INFO - Started process 452 to run task
[2024-01-04T07:06:06.156+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'db_dg', 'create_post_DB', 'manual__2024-01-04T07:00:44.090125+00:00', '--job-id', '64', '--raw', '--subdir', 'DAGS_FOLDER/create_database_dag.py', '--cfg-path', '/tmp/tmpq_hkox5v']
[2024-01-04T07:06:06.158+0000] {standard_task_runner.py:88} INFO - Job 64: Subtask create_post_DB
[2024-01-04T07:06:06.390+0000] {task_command.py:423} INFO - Running <TaskInstance: db_dg.create_post_DB manual__2024-01-04T07:00:44.090125+00:00 [running]> on host 34fb0f920c20
[2024-01-04T07:06:06.745+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='prady1900' AIRFLOW_CTX_DAG_ID='db_dg' AIRFLOW_CTX_TASK_ID='create_post_DB' AIRFLOW_CTX_EXECUTION_DATE='2024-01-04T07:00:44.090125+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-04T07:00:44.090125+00:00'
[2024-01-04T07:06:06.746+0000] {sql.py:276} INFO - Executing: 
create table if not exists incident_new(
    id integer primary_key,
    impact integer,
    number varchar(50)
)
[2024-01-04T07:06:06.760+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T07:06:06.847+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T07:06:06.867+0000] {sql.py:432} INFO - Running statement: 
create table if not exists incident_new(
    id integer primary_key,
    impact integer,
    number varchar(50)
), parameters: None
[2024-01-04T07:06:06.872+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "primary_key"
LINE 3:     id integer primary_key,
                       ^

[2024-01-04T07:06:06.883+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=db_dg, task_id=create_post_DB, execution_date=20240104T070044, start_date=20240104T070605, end_date=20240104T070606
[2024-01-04T07:06:06.997+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 64 for task create_post_DB (syntax error at or near "primary_key"
LINE 3:     id integer primary_key,
                       ^
; 452)
[2024-01-04T07:06:07.013+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-04T07:06:07.028+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
